# iTalk-

./: .gitignore  CONTRIBUTING.MD  LICENSE  README.md  pyproject.toml
.guthub/workflows/: ci.yml
src/pyrefactor/: __init__.py  cli.py  rules.py
tests/: test_rules.py
